@@ -1,8 +1,8 @@
 Package: gogarch
-Version: 0.6-7
+Version: 0.6-8
 Type: Package
 Title: Generalized Orthogonal GARCH (GO-GARCH) models
-Date: 2009-02-23
+Date: 2009-03-06
 Author: Bernhard Pfaff
 Maintainer: Bernhard Pfaff <bernhard@pfaffikus.de>
 Depends: R (>= 2.7.0), methods, stats, graphics, fGarch, fastICA
