@@ -1,3 +1,7 @@
+2009-03-06  Dr. Bernhard Pfaff  <bp@callisto>
+
+	* R/Functions.R (unvech): Fixed bug in creating symmetric matrix.
+
 2009-02-23  Dr. Bernhard Pfaff  <bp@callisto>
 
 	* man/gogarch.Rd: Replaced method with estby in example section.
